# algorithmic-languages-project-1

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
encode/: base16encoder.cpp  base16encoder.h  debug.h  encoder.cpp  encoder.h  shift_side.cpp  shift_side.h  string_utils.cpp  string_utils.h
